test/files/neg/bug910.check
bug910.scala:4: error: type mismatch;
 found   : Seq[Char]
 required: scala.Seq[int]
    val y: Seq[int] = rest
                      ^
one error found
